[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener application with Flask API through uWSGi"
authors = ["Josep Palet <jm.palet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.9"
Flask = "^2.1.2"
uWSGI = "^2.0.20"
redis = "^4.3.4"
pydantic = "^1.9.1"
flasgger = "^0.9.5"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-freezegun = "^0.4.2"
black = "^22.3.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
mypy = "^0.971"
isort = "^5.10.1"
pylint = "^2.14.5"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
import-linter = "^1.2.7"
pytest-env = "^0.6.2"
types-redis = "^4.3.14"
fakeredis = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
